-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 10, 11
-
Component/s: hotspot
-
b15
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8203990 | 11.0.1 | Coleen Phillimore | P4 | Resolved | Fixed | team |
| JDK-8295820 | 8u361 | Fairoz Matte | P4 | Resolved | Fixed | b04 |
| JDK-8296648 | 8u351 | Ryan Wallace | P4 | Closed | Fixed | b32 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/rehn/source/jdk/vanilla-jdk/open/src/hotspot/os/linux/os_linux.cpp:2550), pid=7514, tid=7514
# assert(ReduceSignalUsage) failed: signal semaphore should be created
#
# JRE version: (11.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.rehn.open, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: /home/rehn/source/jdk/vanilla-jdk/core.%p.%i.%s.%t
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/home/rehn/source/jdk/vanilla-jdk/closed/test/jdk/com/oracle/jfr/cmd -Dtest.src.path=/home/rehn/source/jdk/vanilla-jdk/closed/test/jdk/com/oracle/jfr/cmd:/home/rehn/source/jdk/vanilla-jdk/open/test/jdk/lib/testlibrary:/home/rehn/source/jdk/vanilla-jdk/closed/test/jdk -Dtest.classes=/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/com/oracle/jfr/cmd/TestSplit.d -Dtest.class.path=/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/com/oracle/jfr/cmd/TestSplit.d:/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/open/test/jdk/lib/testlibrary:/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/closed/test/jdk -Dtest.vm.opts= -Dtest.tool.vm.opts= -Dtest.compiler.opts= -Dtest.java.opts= -Dtest.jdk=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/jdk -Dcompile.jdk=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/jdk -Dtest.timeout.factor=1.0 -Dtest.modules=jdk.jfr -Dtest.nativepath=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/test/jdk/jtreg/native --add-modules=jdk.jfr -Djava.library.path=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/test/jdk/jtreg/native -XX:+UnlockCommercialFeatures com.sun.javatest.regtest.agent.MainWrapper /home/rehn/source/jdk/vanilla-jdk/JTwork/com/oracle/jfr/cmd/TestSplit.d/main.1.jta
Host: rehn-ws, Intel(R) Xeon(R) CPU E5-2665 0 @ 2.40GHz, 32 cores, 31G, Fedora release 27 (Twenty Seven)
Time: Thu Apr 19 12:47:29 2018 CEST elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread is native thread
Stack: [0x00007ffd7a7c0000,0x00007ffd7afbe000], sp=0x00007ffd7afb9010, free space=8164k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x182c91f] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x25f
V [libjvm.so+0x182d6df] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xaa8180] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
C [libpthread.so.0+0x12af0]
########################################
By looping many short java programs and sending SIGINT to them randomly sometimes this happens.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/rehn/source/jdk/vanilla-jdk/open/src/hotspot/os/linux/os_linux.cpp:2550), pid=7514, tid=7514
# assert(ReduceSignalUsage) failed: signal semaphore should be created
#
# JRE version: (11.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.rehn.open, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: /home/rehn/source/jdk/vanilla-jdk/core.%p.%i.%s.%t
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/home/rehn/source/jdk/vanilla-jdk/closed/test/jdk/com/oracle/jfr/cmd -Dtest.src.path=/home/rehn/source/jdk/vanilla-jdk/closed/test/jdk/com/oracle/jfr/cmd:/home/rehn/source/jdk/vanilla-jdk/open/test/jdk/lib/testlibrary:/home/rehn/source/jdk/vanilla-jdk/closed/test/jdk -Dtest.classes=/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/com/oracle/jfr/cmd/TestSplit.d -Dtest.class.path=/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/com/oracle/jfr/cmd/TestSplit.d:/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/open/test/jdk/lib/testlibrary:/home/rehn/source/jdk/vanilla-jdk/JTwork/classes/closed/test/jdk -Dtest.vm.opts= -Dtest.tool.vm.opts= -Dtest.compiler.opts= -Dtest.java.opts= -Dtest.jdk=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/jdk -Dcompile.jdk=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/jdk -Dtest.timeout.factor=1.0 -Dtest.modules=jdk.jfr -Dtest.nativepath=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/test/jdk/jtreg/native --add-modules=jdk.jfr -Djava.library.path=/home/rehn/source/jdk/vanilla-jdk/build/linux-x86_64-normal-server-fastdebug/images/test/jdk/jtreg/native -XX:+UnlockCommercialFeatures com.sun.javatest.regtest.agent.MainWrapper /home/rehn/source/jdk/vanilla-jdk/JTwork/com/oracle/jfr/cmd/TestSplit.d/main.1.jta
Host: rehn-ws, Intel(R) Xeon(R) CPU E5-2665 0 @ 2.40GHz, 32 cores, 31G, Fedora release 27 (Twenty Seven)
Time: Thu Apr 19 12:47:29 2018 CEST elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread is native thread
Stack: [0x00007ffd7a7c0000,0x00007ffd7afbe000], sp=0x00007ffd7afb9010, free space=8164k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x182c91f] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x25f
V [libjvm.so+0x182d6df] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xaa8180] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
C [libpthread.so.0+0x12af0]
########################################
By looping many short java programs and sending SIGINT to them randomly sometimes this happens.
- backported by
-
JDK-8203990 Possible to receive signal before signal semaphore created
-
- Resolved
-
-
JDK-8295820 Possible to receive signal before signal semaphore created
-
- Resolved
-
-
JDK-8296648 Possible to receive signal before signal semaphore created
-
- Closed
-
- relates to
-
JDK-8134537 Much nearly duplicated code for sun.misc.Signal support
-
- Resolved
-