8202014: Possible to receive signal before signal semaphore created

Initialize jdk.internal.misc.Signal in os_init2 and rename initialization functions.

Reviewed-by: dholmes, stuefe