src/hotspot/share/runtime/os.cpp
@@ -443,7 +443,7 @@ void os::init_before_ergo() {
   VM_Version::init_before_ergo();
 }
 
-void os::signal_init(TRAPS) {
+void os::initialize_jdk_signal_support(TRAPS) {
   if (!ReduceSignalUsage) {
     // Setup JavaThread for processing signals
     Klass* k = SystemDictionary::resolve_or_fail(vmSymbols::java_lang_Thread(), true, CHECK);
@@ -472,8 +472,6 @@ void os::signal_init(TRAPS) {
                             vmSymbols::thread_void_signature(),
                             thread_oop,         // ARG 1
                             CHECK);
-
-    os::signal_init_pd();
 
     { MutexLocker mu(Threads_lock);
       JavaThread* signal_thread = new JavaThread(&signal_thread_entry);
